--- a/estilos.css
+++ b/estilos.css
@@ -4,6 +4,10 @@
 	font-weight: 100;
 }
 
+ body { 
+	 background-image: linear-gradient(135deg, #1087d6 0%, #0c9bfa 100%);
+ }
+
 .nav__responsive-ul {
 	display: none;
 }
@@ -60,27 +64,28 @@
 	margin: 5px;
 }
 
-.parrafoquiensoy {
+.parrafoquiensoy p {
 	font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 	font-size: 23px;
-	color: blue;
+	color: rgb(94, 5, 236);
 	justify-content: left;
 	justify-items: left;
 	padding: 10px;
 	margin: 5px;
 
 }
-.parrafohabilidades {
+ .parrafohabilidades p {
 	font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 	font-size: 23px;
-	color: blue;
+	color: rgb(94, 5, 236);
 	padding-top: 35px;
 	margin: 10px;
-	}
+	} 
 	
 @media only screen and (max-width: 500px) {
 .nav__ul {
 	display: none;
+	
 	}
 
 .nav {
@@ -91,6 +96,7 @@
 .nav__responsive-ul {
 	display: block;
 	position: absolute;
+	list-style: none;
 	background-color:rgb(13, 153, 196);
 	width: 100%;
 	margin-top: 37px;
@@ -144,7 +150,7 @@ width: 100%;
 .parrafoquiensoy p {
 	font-size: 14px;
 	font-family: arial, Helvetica, sans-serif;
-	color: blue;
+	color: rgb(94, 5, 236);
 	font-style: bold;
 	padding-top: 8px;
 	padding-left: 5px;
@@ -160,10 +166,18 @@ width: 100%;
 	object-fit: cover;
 }
 
-.parrafohabilidades {
+.parrafohabilidades p {
 	font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 	font-size: 10px;
-	color: blue;
+	color:rgb(94, 5, 236);
 	padding-top: 35px;
 	margin: 10px;
+}
+
+#footer {
+	width: 100%;
+    height: 81px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
 }
