--- a/grid-galeria.css
+++ b/grid-galeria.css
@@ -106,7 +106,7 @@
     grid-auto-flow: dense;
   }
   
-  @media (min-width: 600px) {
+@media (min-width: 600px) {
     .wide {
       grid-column: span 2;
     }
@@ -115,92 +115,101 @@
       grid-row: span 2;
     }
   }
-  @media only screen and (max-width: 500px) {
-    .nav__ul {
-      display: none;
-      }
-    
-    .nav {
-      height: 64px;
-      width: 100%;
-      background-color:rgb(13, 153, 196);
-        }
-    .nav__responsive-ul {
-      display: block;
-      position: absolute;
-      background-color:rgb(13, 153, 196);
-      width: 100%;
-      margin-top: 37px;
-      padding-top: 27px;
-      height: 7px;
-      
-      
-      }
-    .nav__li-container {
-      position: relative;
-        top: -1000px;
-        height: 100vh;
-        background-color: rgb(13, 153, 196);
-        transition: all 1s;
-        z-index: 1;
-        padding-top: 27px;
-        
-    }
-    
-    .nav__li-container:hover {
-      transform: translateY(1000px);
-    }
-    .nav__responsive-li {
-      width: 100%;
-      padding: 9px 20px;
-      }
-    
-    .nav__responsive-li i {
-      box-sizing: border-box;
-      text-align: right;
-      margin-right: 5px;
-      width: 30px;
-      color: #016;
-    }	
-    
-    .nav__responsive-li a {
-      color: #016;
-      text-decoration: none;
-    }
-    
-    .nav__responsive-ul:hover > .nav__li-container {
-      top: -27px;
-    }
-    .nav__responsive-ul:hover > .nav__li-container {
-    display: inline-flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    width: 100%;
-    }
-    
-    .parrafoquiensoy p {
-      font-size: 14px;
-      font-family: arial, Helvetica, sans-serif;
-      color: blue;
-      font-style: bold;
-      padding-top: 8px;
-      padding-left: 5px;
-      margin: 1px;
-    }
-    
-    .me {
-      width: 150px;
-      height: 150px;
-      margin: 2px;
-      padding-top: 30px;
-      padding-left: 5px;
-      object-fit: cover;
-    }
-    
-    .parrafohabilidades {
-      font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-      font-size: 10px;
-      color: blue;
-      padding-top: 35px;
-      margin: 10px;
-    }
+
+ @media only screen and (max-width: 500px) {
+		.nav__ul {
+			display: none;
+			}
+		
+		.nav {
+			height: 64px;
+			width: 100%;
+			background-color:rgb(13, 153, 196);
+			}
+		.nav__responsive-ul {
+			display: block;
+			position: absolute;
+			background-color:rgb(13, 153, 196);
+			width: 100%;
+			margin-top: 37px;
+			padding-top: 27px;
+			height: 7px;
+			
+			
+			}
+		.nav__li-container {
+			position: relative;
+				top: -1000px;
+				height: 100vh;
+				background-color: rgb(13, 153, 196);
+				transition: all 1s;
+				z-index: 1;
+				padding-top: 27px;
+				
+		}
+		
+		.nav__li-container:hover {
+			transform: translateY(1000px);
+		}
+		.nav__responsive-li {
+			width: 100%;
+			padding: 9px 20px;
+			}
+		
+		.nav__responsive-li i {
+			box-sizing: border-box;
+			text-align: right;
+			margin-right: 5px;
+			width: 30px;
+			color: #016;
+		}	
+		
+		.nav__responsive-li a {
+			color: #016;
+			text-decoration: none;
+		}
+		
+		.nav__responsive-ul:hover > .nav__li-container {
+			top: -27px;
+		}
+		.nav__responsive-ul:hover > .nav__li-container {
+		display: inline-flex;
+		flex-direction: column;
+		flex-wrap: wrap;
+		width: 100%;
+		}
+		
+		.parrafoquiensoy p {
+			font-size: 14px;
+			font-family: arial, Helvetica, sans-serif;
+			color: blue;
+			font-style: bold;
+			padding-top: 8px;
+			padding-left: 5px;
+			margin: 1px;
+		}
+		
+		.me {
+			width: 150px;
+			height: 150px;
+			margin: 2px;
+			padding-top: 30px;
+			padding-left: 5px;
+			object-fit: cover;
+		}
+		
+		.parrafohabilidades {
+			font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+			font-size: 10px;
+			color: blue;
+			padding-top: 35px;
+			margin: 10px;
+		}
+
+#footer {
+	width: 100%;
+    height: 81px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
